# k8s-observability-demo

./: .gitignore  ARCHITECTURE.md  LOGS_TRACES_READY.md  MIGRATION_COMPLETE.md  Makefile  README.md  VERIFY_DATA.md  docker-compose.yml  otel-collector-config.yaml  promtail-docker-config.yaml  setup.sh  test-logs-traces.sh  test-otel-migration.sh  trace-info.sh  verify-nats-trace.sh
docker-images/: load.sh
docs/: ARCHITECTURE.md  DATA_FLOW.md  FAQ.md  GRAFANA_GUIDE.md  LOGS_GUIDE.md  LOGS_TRACES_READY.md  NATS_TRACE_PROPAGATION.md  OBSERVABILITY.md  OTEL_MIGRATION.md  QUICKSTART.md  SUMMARY.md  VERIFY_DATA.md
k8s/infrastructure/: mongodb.yaml  nats.yaml  postgres.yaml
k8s/observability/: grafana-datasources.yaml  otel-collector.yaml  prometheus-config.yaml  tempo-config.yaml
k8s/services/: go-inventory-service.yaml  python-user-service.yaml  rust-order-service.yaml
scripts/: deploy-services.sh  install-observability.sh  load-test.sh  test-services.sh
services/go-inventory-service/: Dockerfile  README.md  go.mod  main.go
services/python-user-service/: Dockerfile  README.md  log_config.json  main.py  requirements.txt
services/rust-order-service/: Cargo.toml  Dockerfile  README.md
services/rust-order-service/src/: main.rs
